Add authorization information

--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
                 <a class="btn btn-default btn-md" href="http://46.101.137.196" role="button">Live demo »</a>
             </p>
         </div>
-        <div class="body-content" >
-            <h1>Localhost Setup</h1>
+        <div class="bs-callout bs-callout-warning"><h3>Authorization</h3>
+            <h4> Administrator login </h4>
+            <p style="padding-left: 15px;"> <strong> Login</strong> : admin@blog.com <br/>
+                <strong>Password:</strong> demo</p>
+            <br/>
+            <h4> User login </h4>
+            <p style="padding-left: 15px;"><strong> Login:</strong> user1@test.com <br/>
+                <strong>Password:</strong> demo </p>
+        </div>
+        <div class="body-content">
+            <h1>#Localhost Setup</h1>
             <br/>
 
             <div class="bs-callout bs-callout-warning"><h3>1. Database</h3>
