Add link styling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div class="row">
             <h1 class="project-name">Blog as Proof of Concept</h1>
             <h2 class="project-tagline">Tutorial - localhost install</h2>
-            <a href="https://github.com/mszostok/blog-proof-of-concept" class="btn">View on GitHub</a>
-            <a href="https://github.com/mszostok/blog-proof-of-concept/zipball/master" class="btn">Download .zip</a>
-            <a href="https://github.com/mszostok/blog-proof-of-concept/tarball/master" class="btn">Download .tar.gz</a>
+            <a href="https://github.com/mszostok/blog-proof-of-concept" class="btn btn-default">View on GitHub</a>
+            <a href="https://github.com/mszostok/blog-proof-of-concept/zipball/master" class="btn btn-default">Download .zip</a>
+            <a href="https://github.com/mszostok/blog-proof-of-concept/tarball/master" class="btn btn-default">Download .tar.gz</a>
         </div>
     </div>
 </div>
